# cpp-best-practices

./: .codecov.yml  .gitignore  .lgtm.yml  CMakeLists.txt  README.md  SECURITY.md  explain.md  run-image.sh
.github/: FUNDING.yml
.github/workflows/: ci.yml  codecov.yml
codeql-test/: .gitignore  Makefile  build-codeql-db.sh  run-query.sh  test.cpp
codeql/cpp/ql/src/Critical/: test.ql
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
src/: CMakeLists.txt  leak.cpp  leak.hpp  main.cpp  ops.cpp  ops.hpp  parse_args.cpp  parse_args.hpp  sandemo.cpp  sandemo.hpp
test/: CMakeLists.txt  constexpr_tests.cpp  ops.cpp  test_ops.cpp  test_parse_args.cpp  unittest.ops.cpp
tools/: build-codeql-db.sh  codeql-query.sh  gcovr.sh  time-build.sh
